# book-json-cleaner

./: .gitignore  CLAUDE.md  Makefile  README.md  SYMLINK_SETUP.md  TRANSLATION_ASSISTANT_MANAGER_GUIDE.md  clean_input_json.py  content_structuring_processor.py  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  sitecustomize.py
.claude/agents/: translation-ui-manager.md
ai/: __init__.py  assistant_manager.py
cli/: __init__.py  build_epub.py  clean.py  footnotes.py  structure.py  translate.py  validate_structure.py
docs/: POST_PROCESSING_GUIDE.md
processors/: __init__.py  epub_builder.py  footnote_generator.py  json_cleaner.py  structure_validator.py  translator.py
scripts/: README_WUXIA_CATALOG.md  SETUP_GUIDE.md  batch_process_books.py  catalog_wuxia_files.py  enrich_catalog_with_csv.py  test_file_paths.py
src/template_pkg/: main.py
utils/: __init__.py  catalog_metadata.py  chapter_sequence_validator.py  fix_chapter_alignment.py  restructure_toc.py  sanity_checker.py  topology_analyzer.py
utils/clients/: __init__.py  anthropic_client.py  openai_client.py
